# rust_chat_app

./: README.md
.github/workflows/: client_ci.yml  server_ci.yml
client/: .env.default  .prettierignore  package-lock.json  package.json
client/src/: App.tsx
client/src/components/: ChatHistory.tsx  ChatWindow.tsx  UsernamePrompt.tsx
client/src/types/: Message.ts  MessageType.ts
server/: .env.default  Cargo.toml
server/src/: main.rs
