[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
